update config.yml(add running powershell)

--- a/javascript/files/helloworld.html
+++ b/javascript/files/helloworld.html
@@ -5,6 +5,6 @@
     <title>Sample</title>
   </head>
   <body>
-    <script type="text/javascript" src="helloworld.js"></script>
+    <script type="text/javascript" src="files/helloworld.js"></script>
   </body>
 </html>
