--- a/javascript/files/helloworld.html
+++ b/javascript/files/helloworld.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>Sample</title>
+    <title>Sample!</title>
   </head>
   <body>
     <script type="text/javascript" src="files/helloworld.js"></script>
